--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ uvicorn==0.40.0
 watchfiles==1.1.1
 websockets==15.0.1
 wsproto==1.3.2
-withenoise==6.5.0
-django-cors-headers==4.3.0
+whitenoise
+django-cors-headers
+
 
